# Problem_Change_Project

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  codex.md  codex_update.md  docker-compose.yml  pyproject.toml
app/: main.py
app/agents/: base.py  blank_agent.py  grammar_agent.py  implicit_agent.py  insertion_agent.py  irrelevant_agent.py  order_agent.py  reference_agent.py  summary_agent.py  title_agent.py  topic_agent.py  vocab_agent.py
app/core/: config.py  errors.py
app/db/: models.py
app/llm/: client.py  json.py  provider.py  schema.py
app/problems/: problem_record.schema.json
app/prompts/: analysis.md  base_system.md  blank.md  blank_choices_repair.md  blank_uniqueness_check.md  grammar.md  implicit.md  insertion.md  irrelevant.md  loader.py  order.md  reference.md  self_check.md  summary.md  title.md  topic.md  vocab.md
app/schemas/: analysis.py  base.py  blank.py  grammar.py  implicit.py  insertion.py  irrelevant.py  order.py  reference.py  storage.py  summary.py  title.py  topic.py  vocab.py
app/storage/: __init__.py  db_store.py  persistence.py  problem_store.py
app/toolkit/: difficulty.py  text.py  (+5 more)
frontend/: index.html  package-lock.json  package.json  vite.config.js
tests/: fixtures.py  test_blank_passage_integrity.py  test_choice_coercion.py  test_db_store_sqlalchemy.py  test_endpoints_smoke.py  test_implicit_passage_integrity.py  test_problem_persistence_service.py  test_problem_store.py  test_storage_schema.py  test_summary_agent_repair.py  test_text_normalize.py  test_type_validators.py  test_vocab_grammar_normalize.py
(+2 files in other folders)
