[project]
name = "problem-change-project"
version = "0.1.0"
description = "FastAPI scaffold for passage-to-exam-item transformations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "annotated-doc>=0.0.4",
  "uvicorn>=0.30.0",
  "google-genai>=1.0.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0"
]

[dependency-groups]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
